moving styles to a combined sass file, updating tasks
Should be able to split output into separate files later on with sass
partials and global variables for #3.
Note: Will move tsc compiler to grunt tasks on a later point.

--- a/samples/list/index.html
+++ b/samples/list/index.html
@@ -5,6 +5,7 @@
   	<title>Zero Blocks List</title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
+    <link href="../../dist/zero-blocks.dev.css" rel="stylesheet" type="text/css">
     <style>
     body {
         font-family: "Open sans",Helvetica,Arial,sans-serif;
