Adding the new tab component

--- a/samples/index.html
+++ b/samples/index.html
@@ -18,6 +18,7 @@
     <ul>
         <li><a href="./navigation-drawer/index.html">Navigation Drawer</a></li>
         <li><a href="./list/index.html">List</a></li>
+		<li><a href="./tab/index.html">Tab</a></li>
     </ul>
 </body>
 </html>
