#20 - re-write tabbar and tab; Implement select() and style the controls

--- a/samples/tab/app/main.html
+++ b/samples/tab/app/main.html
@@ -1,9 +1,14 @@
-<ig-tab-bar [position]="Bottom" [tabItems]="datasource"></ig-tab-bar>
-<!-- <ig-tabbar >
+<ig-tab-bar> 
 	<ig-tab>
-    Content of tab Foo
-  </ig-tab>
-  <ig-tab tabTitle="Bar">
-    Content of tab Bar
-  </ig-tab>
-</ig-tabbar> -->
+    	Tab1
+  	</ig-tab>
+	<ig-tab>
+		Tab2
+	</ig-tab>
+	<ig-tab>
+		Tab3
+	</ig-tab>
+	<ig-tab>
+		Tab4
+	</ig-tab>
+</ig-tab-bar>
