--- a/src/tab/tab-bar-content.html
+++ b/src/tab/tab-bar-content.html
@@ -1,5 +1,3 @@
 <div class={{_itemStyle}}>
-  <ig-tab *ngFor="let tab of _tabItems">
-    {{ tab.text }}
-  </ig-tab>
+	<ng-content></ng-content>
 </div>
