--- a/samples/tab/index.html
+++ b/samples/tab/index.html
@@ -9,7 +9,24 @@
     <style>
     body {
         font-family: "Open sans",Helvetica,Arial,sans-serif;
+        margin: 0;        
     }
+    .home-icon1 {
+            background-image: url("app/images/Icons.png");
+            background-position: -67px 293px;
+        }
+        .home-icon2 {
+            background-image: url("app/images/Icons.png");
+            background-position: -107px 293px;
+        }
+        .home-icon3 {
+            background-image: url("app/images/Icons.png");
+            background-position: -147px 293px;
+        }
+        .home-icon4 {
+            background-image: url("app/images/Icons.png");
+            background-position: -187px 293px;
+        }
     </style>
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
