--- a/src/tab/tab-bar-content.html
+++ b/src/tab/tab-bar-content.html
@@ -1,10 +1,16 @@
 
-<div class="{{_itemStyle}} tabbar-top">
-	<ul>
+<div class="{{_itemStyle}} tab-bar-{{alignment}}">
+	<ul #unorderedList *ngIf="alignment === 'top'">
 		<li *ngFor="let tab of tabs" [class.selected]="tab.isSelected" (click)="selectTab(tab)" ngClass="col-{{getColumns()}}">
 			<div ngClass="tab-icon {{tab.icon}}"></div>
 			<div ngClass="tab-label">{{tab.label}}</div>
 		</li>
-	</ul>	
+	</ul>
+	<ng-content></ng-content>
+	<ul #unorderedList *ngIf="alignment === 'bottom'">
+		<li *ngFor="let tab of tabs" [class.selected]="tab.isSelected" (click)="selectTab(tab)" ngClass="col-{{getColumns()}}">
+			<div ngClass="tab-icon {{tab.icon}}"></div>
+			<div ngClass="tab-label">{{tab.label}}</div>
+		</li>
+	</ul>
 </div>
-<ng-content></ng-content>
