--- a/src/tab/tab-content.html
+++ b/src/tab/tab-content.html
@@ -1,3 +1,3 @@
-<div class="{{_itemStyle}}" [class.selected]="isSelected" >
+<div #wrapper class="{{_itemStyle}}" [class.selected]="isSelected" >
 	<ng-content></ng-content>
 </div>
