--- a/samples/navigation-drawer/mini.html
+++ b/samples/navigation-drawer/mini.html
@@ -11,24 +11,21 @@
 			font-family: "Open sans",Helvetica,Arial,sans-serif;
 		}
 	</style>
-	<!-- 1. Load libraries -->
-	<!-- IE required polyfills, in this exact order -->
-	<script src="../../node_modules/es6-shim/es6-shim.min.js"></script>
-	<script src="../../node_modules/systemjs/dist/system-polyfills.js"></script>
-	<!--https://github.com/angular/angular/issues/7144:-->
-	<script src="../../node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
+ 	<!-- 1. Load libraries -->
+    <!-- Polyfill(s) for older browsers -->
+    <script src="../../node_modules/core-js/client/shim.min.js"></script>
 
-	<script src="../../node_modules/angular2/bundles/angular2-polyfills.js"></script>
-	<script src="../../node_modules/systemjs/dist/system.src.js"></script>
-	<script src="../../node_modules/rxjs/bundles/Rx.js"></script>
-	<script src="../../node_modules/angular2/bundles/angular2.dev.js"></script>
-	<script src="../../node_modules/hammerjs/hammer.js"></script>
-
-	<!-- 2. Configure SystemJS -->
-	<script>
-		var sample = "mini";
-	</script>
-	<script src="app/config.js"></script>
+    <script src="../../node_modules/zone.js/dist/zone.js"></script>
+    <script src="../../node_modules/systemjs/dist/system.src.js"></script>
+    <script src="../../node_modules/rxjs/bundles/Rx.js"></script>
+    
+    <script src="../../node_modules/hammerjs/hammer.js"></script>
+    
+    <!-- 2. Configure SystemJS -->
+    <script>
+        var sample = "mini";
+    </script>
+    <script src="../shared/systemjs.config.js"></script>
 </head>
 
 <!-- 3. Display the application -->
