--- a/samples/tab/index.html
+++ b/samples/tab/index.html
@@ -11,21 +11,26 @@
             font-family: "Open sans",Helvetica,Arial,sans-serif;
             margin: 0;        
         }
-        .home-icon1 {
+        .tab-icon {
             background-image: url("app/images/Icons.png");
+        }
+        .home-icon1 {            
             background-position: -67px 293px;
         }
-        .home-icon2 {
-            background-image: url("app/images/Icons.png");
+        .home-icon2 {            
             background-position: -107px 293px;
         }
-        .home-icon3 {
-            background-image: url("app/images/Icons.png");
+        .home-icon3 {            
             background-position: -147px 293px;
         }
-        .home-icon4 {
-            background-image: url("app/images/Icons.png");
+        .home-icon4 {            
             background-position: -187px 293px;
+        }
+        .home-icon5 {            
+            background-position: -467px 253px;
+        }
+        .home-icon6 {            
+            background-position: -427px 253px;
         }
     </style>
     <!-- 1. Load libraries -->
