#25 - implement initial selection

--- a/samples/tab/app/main.html
+++ b/samples/tab/app/main.html
@@ -1,5 +1,5 @@
 <ig-tab-bar alignment="top">
-	<ig-tab label="Facebook" href="#" icon="home-icon1"> 
+	<ig-tab label="Facebook" href="#" icon="home-icon1" disabled> 
 	    	<h1>Facebook</h1>
 
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.
