--- a/samples/tab/index.html
+++ b/samples/tab/index.html
@@ -4,12 +4,15 @@
   <head>
   	<title>Zero Blocks List</title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
     <link href="../../dist/dev/zero-blocks.css" rel="stylesheet" type="text/css">
     <style>
         body {
             font-family: "Open sans",Helvetica,Arial,sans-serif;
-            margin: 0;        
+            margin: 0;      
+            color: #444;  
         }
         .tab-icon {
             background-image: url("app/images/Icons.png");
@@ -31,6 +34,14 @@
         }
         .home-icon6 {            
             background-position: -427px 253px;
+        }
+        body > div {
+            height: 400px;
+            position: relative;
+            overflow: auto;
+        }
+        .viewport {
+            border: 10px solid #ccc;
         }
     </style>
     <!-- 1. Load libraries -->
@@ -54,7 +65,16 @@
 
   <!-- 3. Display the application -->
   <body>
-    <sample-app> Loading ... </sample-app>
+    
+    <div class="viewport">
+        <sample-app> Loading ... </sample-app>
+    </div>
+    <br>
+    <div>
+        <h3>
+            View port of smartPhone ^
+        </h1>        
+    </div>
   </body>
 
 </html>
