Add initial test for TabBat and for List; Add click method tab

--- a/samples/tab/app/main.html
+++ b/samples/tab/app/main.html
@@ -44,3 +44,11 @@
 			Morbi viverra, ante vel aliquet tincidunt, leo dolor pharetra quam, at semper massa orci nec magna. Donec posuere nec sapien sed laoreet. Etiam cursus nunc in condimentum facilisis. Etiam in tempor tortor. Vivamus faucibus egestas enim, at convallis diam pulvinar vel. Cras ac orci eget nisi maximus cursus. Nunc urna libero, viverra sit amet nisl at, hendrerit tempor turpis. Maecenas facilisis convallis mi vel tempor. Nullam vitae nunc leo. Cras sed nisl consectetur, rhoncus sapien sit amet, tempus sapien.
 	</ig-tab>
 </ig-tab-bar>
+<div>
+        <div ig-tab-view="1">
+            View 1 loaded through href.
+        </div>
+        <div ig-tab-view="2">
+            View 2 loaded through href.
+        </div>
+    </div>
