--- a/samples/tab/index.html
+++ b/samples/tab/index.html
@@ -35,8 +35,9 @@
         .home-icon6 {            
             background-position: -427px 253px;
         }
-        body > div {
-            height: 400px;
+        body > div.viewport {
+            height: 800px;
+            width: 600px;
             position: relative;
             overflow: auto;
         }
@@ -74,7 +75,7 @@
         <h3>
             View port of smartPhone ^
         </h1>        
-    </div>
+    </div>    
   </body>
 
 </html>
