--- a/src/tab/tab-bar-content.html
+++ b/src/tab/tab-bar-content.html
@@ -2,7 +2,7 @@
 <div class="{{_itemStyle}} tab-bar-{{alignment}}">
 	<ng-content></ng-content>
 	<ul #unorderedList >
-		<li *ngFor="let tab of _visibleTabs" [class.selected]="tab.isSelected" [class.disabled]="tab.isDisabled" (click)="select(_visibleTabs.indexOf(tab))" ngClass="col-{{_getColumns()}}">
+		<li *ngFor="let tab of _visibleTabs" [class.selected]="tab.isSelected" [class.disabled]="tab.isDisabled" (click)="tab.click()" ngClass="col-{{_getColumns()}}">
 			<div ngClass="tab-icon {{tab.icon}}">
 				<span [class.hidden]="tab._changesCount == 0" class="badge">{{tab._changesCount}}</span>
 			</div>
