Check list component for consistency and improve it; Uncomment some of the nav-drawer test asserts

--- a/src/list/list-content.html
+++ b/src/list/list-content.html
@@ -1,4 +1,4 @@
-<div class="{{_innerStyle}}">
+<div #wrapper class="{{_innerStyle}}">
   <ng-content></ng-content>  
 </div>
 <div *ngIf="_panOptions" class="options">
