--- a/src/list/list-content.html
+++ b/src/list/list-content.html
@@ -1,7 +1,7 @@
 <div #wrapper class="{{_innerStyle}}" [hidden]="hidden">
   <ng-content></ng-content>  
 </div>
-<div *ngIf="_panOptions" class="options">
+<div *ngIf="options" class="options">
     <button class="btn btn-success"> OK </button>
     <button class="btn btn-danger"> Cancel </button>
     <button class="btn btn-info"> More info </button>
