#50 - Add list test; #52 - improve nav-drawer tests;

--- a/demos/list/app/main.html
+++ b/demos/list/app/main.html
@@ -1,5 +1,5 @@
 <input id="searchbox" />
-<ig-list searchBoxId="searchbox" (filtered)="filteredHandler($event)">
+<ig-list searchInputId="searchbox" (filtered)="filteredHandler($event)">
     <ig-list-header>Filtered List</ig-list-header>     
     <ig-list-item *ngFor="let navItem of navItems; let index = index" [options]="options">
       {{navItem.text}}
