#54 - remove duplicate code form tab; add selectTab event;

--- a/demos/tab/app/main.html
+++ b/demos/tab/app/main.html
@@ -1,4 +1,4 @@
-<ig-tab-bar alignment="bottom">
+<ig-tab-bar alignment="bottom" (selectTab)="selectTab($event)">
 	<ig-tab label="Facebook" href="#" icon="home-icon1" disabled> 
 	    	<h1>Facebook</h1>
 
