Initial carousel implementation plus unit tests

--- a/demos/index.html
+++ b/demos/index.html
@@ -19,6 +19,7 @@
         <li><a href="./navigation-drawer/index.html">Navigation Drawer</a></li>
         <li><a href="./list/index.html">List</a></li>
 		<li><a href="./tab/index.html">Tab</a></li>
+		<li><a href="./carousel/index.html">Carousel</a></li>
     </ul>
 </body>
 </html>
