--- a/src/tab/tab-bar-content.html
+++ b/src/tab/tab-bar-content.html
@@ -2,13 +2,14 @@
 <div class="{{_itemStyle}} tab-bar-{{alignment}}">
 	<ng-content></ng-content>
 	<ul #unorderedList >
-		<li *ngFor="let tab of _visibleTabs" [class.selected]="tab.isSelected" [class.disabled]="tab.isDisabled" (click)="tab.select()" ngClass="col-{{_columns}}">
+		<li *ngFor="let tab of _visibleTabs" [class.selected]="tab.isSelected" [class.disabled]="tab.isDisabled" (click)="tab.select()">
 			<div ngClass="tab-icon {{tab.icon}}">
 				<span [class.hidden]="tab._changesCount == 0" class="badge">{{tab._changesCount}}</span>
 			</div>
 			<div ngClass="tab-label">{{tab.label}}</div>
+			<div ngClass="tab-color tab-color--{{tab.color}}"></div>
 		</li>
-		<li *ngIf="tabs.length > 5" (click)="_selectTabMore()" ngClass="col-{{_columns}}">
+		<li *ngIf="tabs.length > 5" (click)="_selectTabMore()">
 			<div ngClass="tab-icon icon-more">...
 				<!-- <span [class.hidden]="tab._changesCount == 0" class="badge">{{tab._changesCount}}</span> -->
 			</div>
