-added material icons from the official material-design-icons project

--- a/demos/tab/index.html
+++ b/demos/tab/index.html
@@ -15,7 +15,7 @@
             color: #444;  
         }
         .tab-icon {
-            background-image: url("app/images/Icons.png");
+            /*background-image: url("app/images/Icons.png");*/
         }
         .home-icon1 {            
             background-position: -67px 293px;
