--- a/src/tab/tab-bar-content.html
+++ b/src/tab/tab-bar-content.html
@@ -3,7 +3,8 @@
 	<ng-content></ng-content>
 	<ul #unorderedList >
 		<li *ngFor="let tab of _visibleTabs" [class.selected]="tab.isSelected" [class.disabled]="tab.isDisabled" (click)="tab.select()">
-			<div ngClass="tab-icon {{tab.icon}}">
+			<div ngClass="tab-icon">
+				<i class="material-icons">{{tab.icon}}</i>
 				<span [class.hidden]="tab._changesCount == 0" class="badge">{{tab._changesCount}}</span>
 			</div>
 			<div ngClass="tab-label">{{tab.label}}</div>
