-changed tab classes to match BEM naming convention

--- a/demos/tab/app/main.html
+++ b/demos/tab/app/main.html
@@ -1,4 +1,4 @@
-<ig-tab-bar #tabBar alignment="top" (selectTab)="selectTab($event)">
+<ig-tab-bar #tabBar alignment="bottom" (selectTab)="selectTab($event)">
 	<ig-tab label="Movies" href="#" icon="movie" color="1"> 
 	    	<h1>Movies</h1>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.
