Initial implementation of basic inputs
tsconfig transpiles to es6 code for now

--- a/demos/index.html
+++ b/demos/index.html
@@ -20,6 +20,7 @@
         <li><a href="./list/index.html">List</a></li>
 		<li><a href="./tab/index.html">Tab</a></li>
 		<li><a href="./carousel/index.html">Carousel</a></li>
+		<li><a href="./input/index.html">Input</a></li>
     </ul>
 </body>
 </html>
