-merged with rkaraivanov fork -added fonts task to copy fonts to distribution folder -added gulp-plumber to bypass watch tasks breaking upon gulp plugin failures -use arrow functions across all tasks for syntax consistency -use zero-blocks default theme in input demo -remove old css files -update font paths

--- a/demos/input/index.html
+++ b/demos/input/index.html
@@ -7,7 +7,7 @@
     <!-- Latest compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
-    <link href="../../dist/dev/material_theme.css" rel="stylesheet" type="text/css">
+    <link href="../../dist/dev/zero-blocks.css" rel="stylesheet" type="text/css">
     <style>
         body {
             font-family: "Open sans",Helvetica,Arial,sans-serif;
