--- a/src/input/igtext.html
+++ b/src/input/igtext.html
@@ -1,10 +1,10 @@
-<div class="ig-input">
-    <label class="ig-input" [attr.for]="id">
+<div class="ig-form-input">
+    <label class="ig-form-input__label" [attr.for]="id">
         <ng-content></ng-content>
     </label>
     <input #input
         type="text"
-        class="ig-input"
+        class="ig-form-input__input"
         [id]="id"
         [attr.name]="name"
         [disabled]="disabled"
