-created placeholder selectors for basic inputs -created BEM mixins to easily create and update modules

--- a/src/input/igtext.html
+++ b/src/input/igtext.html
@@ -1,4 +1,4 @@
-<div class="ig-form-input">
+<div class="ig-form-input" [class.ig-form-input--active]="_focused">
     <label class="ig-form-input__label" [attr.for]="id">
         <ng-content></ng-content>
     </label>
