-styled input text and input password

--- a/src/input/igtextarea.html
+++ b/src/input/igtextarea.html
@@ -1,9 +1,9 @@
-<div class="ig-input">
-    <label class="ig-input" [attr.for]="id">
+<div class="ig-form-input">
+    <label class="ig-form-input__label" [attr.for]="id">
         <ng-content></ng-content>
     </label>
     <textarea #input
-        class="ig-input"
+        class="ig-input-input__textarea"
         [id]="id"
         [attr.name]="name"
         [disabled]="disabled"
