--- a/demos/input/app/main.html
+++ b/demos/input/app/main.html
@@ -1,6 +1,6 @@
-<ig-text name="username" placeholder="Enter your username..." (change)="foo($event)" (focus)="foo($event)" (blur)="foo($event)" [(ngModel)]="user.username">Username</ig-text>
-<ig-text name="username2" [(ngModel)]="user.username" (change)="foo($event)" [disabled]="shouldDisable">Username 2</ig-text>
-<ig-text disabled="true">Disabled input</ig-text>
+<ig-text name="username" placeholder="Enter your username..." (change)="foo($event)" (focus)="foo($event)" (blur)="foo($event)" [(ngModel)]="user.username">Username (w/ placeholder)</ig-text>
+<ig-text name="username2" [(ngModel)]="user.username" (change)="foo($event)" [disabled]="shouldDisable">Username 2 (floating label)</ig-text>
+<ig-text disabled="true" value="Infragistics">Company (disabled)</ig-text>
 <ig-password [disabled]="shouldDisable" name="password" [(ngModel)]="user.password" required>Password</ig-password>
 
 <ig-textarea [disabled]="shouldDisable" name="textarea1" [(ngModel)]="user.comment"></ig-textarea>
