--- a/src/input/igpassword.html
+++ b/src/input/igpassword.html
@@ -1,10 +1,10 @@
-<div class="ig-input">
-    <label class="ig-input" [attr.for]="id">
-        <ng-content></ng-content>
-    </label>
+<div class="ig-form-input"
+    [class.ig-form-input--filled]="value"
+    [class.ig-form-input--focused]="focused"
+    [class.ig-form-input--floatingLabel]="floatingLabel">
     <input #input
         type="password"
-        class="ig-input"
+        class="ig-form-input__input"
         [id]="id"
         [attr.name]="name"
         [disabled]="disabled"
@@ -14,4 +14,7 @@
         [(ngModel)]="value"
         (focus)="_onFocus($event)"
         (blur)="_onBlur($event)">
+    <label class="ig-form-input__label" [attr.for]="id">
+        <ng-content></ng-content>
+    </label>
 </div>
