--- a/src/input/igtext.html
+++ b/src/input/igtext.html
@@ -1,7 +1,7 @@
-<div class="ig-form-input" [class.ig-form-input--active]="_focused">
-    <label class="ig-form-input__label" [attr.for]="id">
-        <ng-content></ng-content>
-    </label>
+<div class="ig-form-input" 
+    [class.ig-form-input--filled]="value" 
+    [class.ig-form-input--focused]="focused" 
+    [class.ig-form-input--placeholder]="placeholder">
     <input #input
         type="text"
         class="ig-form-input__input"
@@ -14,4 +14,7 @@
         [(ngModel)]="value"
         (focus)="_onFocus($event)"
         (blur)="_onBlur($event)">
+    <label class="ig-form-input__label" [attr.for]="id">
+        <ng-content></ng-content>
+    </label>
 </div>
