-renamed input classes and their group -added styles for textarea input type

--- a/src/input/igpassword.html
+++ b/src/input/igpassword.html
@@ -1,10 +1,10 @@
-<div class="ig-form-input"
-    [class.ig-form-input--filled]="value"
-    [class.ig-form-input--focused]="focused"
-    [class.ig-form-input--floatingLabel]="floatingLabel">
+<div class="ig-form-group"
+    [class.ig-form-group--filled]="value"
+    [class.ig-form-group--focused]="focused"
+    [class.ig-form-group--placeholder]="placeholder">
     <input #input
         type="password"
-        class="ig-form-input__input"
+        class="ig-form-group__input"
         [id]="id"
         [attr.name]="name"
         [disabled]="disabled"
@@ -14,7 +14,7 @@
         [(ngModel)]="value"
         (focus)="_onFocus($event)"
         (blur)="_onBlur($event)">
-    <label class="ig-form-input__label" [attr.for]="id">
+    <label class="ig-form-group__label" [attr.for]="id">
         <ng-content></ng-content>
     </label>
 </div>
