--- a/demos/input/app/main.html
+++ b/demos/input/app/main.html
@@ -3,7 +3,7 @@
 <ig-text disabled="true" value="Infragistics">Company (disabled)</ig-text>
 <ig-password [disabled]="shouldDisable" name="password" [(ngModel)]="user.password" required>Password</ig-password>
 
-<ig-textarea [disabled]="shouldDisable" name="textarea1" [(ngModel)]="user.comment"></ig-textarea>
+<ig-textarea [disabled]="shouldDisable" name="textarea1" [(ngModel)]="user.comment">Textarea</ig-textarea>
 
 <hr>
 <pre>
