--- a/demos/tab/app/main.html
+++ b/demos/tab/app/main.html
@@ -2,7 +2,7 @@
 	<ig-tab label="Movies" href="#" icon="movie" color="1"> 
 	    	<h1>Movies</h1>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.
-
+			<ig-button>Test</ig-button>
 	</ig-tab>
 	<ig-tab label="Music Videos" href="" icon="music_video" color="2"> 
 	    	<h1>Music Videos</h1>
