-added a switch module -moved the styles for checkbox, radio, and switch controls to placeholder selectors -temporarily disabled normalize.scss

--- a/src/radio/radio.html
+++ b/src/radio/radio.html
@@ -1,6 +1,5 @@
-<div>
-    <label [attr.for]="id"><ng-content></ng-content></label>
-    <input type="radio" #radio
+<div class="ig-control">
+    <input class="ig-control__radio" type="radio" #radio
         [attr.id]="id"
         [attr.name]="name"
         [attr.value]="value"
@@ -10,4 +9,5 @@
         (change)="onChange($event)"
         (focus)="onFocus($event)"
         (blur)="onBlur($event)"/>
+    <label class ="ig-control__label" [attr.for]="id"><ng-content></ng-content></label>
 </div>
