--- a/src/switch/switch.html
+++ b/src/switch/switch.html
@@ -1,5 +1,5 @@
 <div class="ig-control">
-    <input class="ig-control__cbx" #checkbox type="checkbox"
+    <input class="ig-control__switch" #checkbox type="checkbox"
         [attr.id]="id"
         [attr.name]="name"
         [attr.value]="value"
