Modify Label to be Directive and start using it in the other components that use labels

--- a/src/input/igtext.html
+++ b/src/input/igtext.html
@@ -14,7 +14,7 @@
         [(ngModel)]="value"
         (focus)="onFocus($event)"
         (blur)="onBlur($event)"/>
-    <label class="ig-form-group__label" [attr.for]="id">
+    <label igLabel [attr.for]="id">
         <ng-content></ng-content>
     </label>
 </div>
