Commit avatar sample, initial code etc.

--- a/src/avatar/avatar.html
+++ b/src/avatar/avatar.html
@@ -1,6 +1,8 @@
 <div>
     <img />
     <div *ngIf="hasLabel">
-        <label igLabel>{{ text }}</label>
+        <label igLabel>
+            <ng-content></ng-content>
+        </label>
     </div>
 </div>
