Updating Navigation Drawer content templates - Content selected with class, rather than tag name to avoid requiring `CUSTOM_ELEMENTS_SCHEMA` in user apps. BEFORE: ``` <ig-nav-drawer>   <!-- expand + mini templates -->   <ig-drawer-content></ig-drawer-content>   <ig-drawer-mini-content></ig-drawer-mini-content> </ig-nav-drawer> ``` AFTER: ``` <ig-nav-drawer>   <!-- expand + mini templates -->   <div class="ig-drawer-content"></div>   <div class="ig-drawer-mini-content"></div> </ig-nav-drawer> ``` - Moving init logic AfterViewInit to allow for conditional content projection (after a compiler bug has been resolved the scenario is supported) - Cleaning up samples

--- a/demos/app/navigation-drawer/main.html
+++ b/demos/app/navigation-drawer/main.html
@@ -12,10 +12,14 @@
     [miniWidth]="drawerMiniWidth">
     
         <!-- expand + mini templates -->
-        <ig-drawer-content>
+        <div class="ig-drawer-content">
             <h1> Drawer Title <button ig-nav-close="test"> X </button></h1>
-            <div *ngFor="let navItem of navItems"><img src="http://www.infragistics.com/assets/images/favicon.ico" width='16' /> <a href="{{navItem.link}}"> {{navItem.text}} </a></div>
-        </ig-drawer-content>
+            <div *ngFor="let navItem of navItems"><img src="http://www.infragistics.com/assets/images/favicon.ico" width='16' /> <a routerLink="{{navItem.link}}"> {{navItem.text}} </a></div>
+        </div>
+        <div *ngIf="miniTemplate" class="ig-drawer-mini-content">
+            <span class="hamburger" ig-nav-toggle="test" > &#9776; </span>
+            <div *ngFor="let navItem of navItems"><img src="http://www.infragistics.com/assets/images/favicon.ico" width='16' /></div>
+        </div>
     </ig-nav-drawer>
     
 <div class="sample-content" [class.full]="pin && !open" [class.pin]="pin">     
