--- a/src/navigation-drawer/navigation-drawer.html
+++ b/src/navigation-drawer/navigation-drawer.html
@@ -3,10 +3,10 @@
     [class.collapsed]="!_hasMimiTempl && !isOpen" [class.mini]="_hasMimiTempl && !isOpen" [class.pinned]="pin" [class.right]="position == 'right'">
     
     <div class="" [hidden]="!isOpen && _hasMimiTempl">
-        <ng-content select="ig-drawer-content"></ng-content>
+        <ng-content select=".ig-drawer-content"></ng-content>
     </div>                
     <div class="" [hidden]="isOpen">
-        <ng-content select="ig-drawer-mini-content"></ng-content>
+        <ng-content select=".ig-drawer-mini-content"></ng-content>
     </div>
 </aside>
 <div class="style-dummy"></div>
