-added label to switch control -created placeholder stylesheet for the avatar control

--- a/src/avatar/avatar.html
+++ b/src/avatar/avatar.html
@@ -1,1 +1,1 @@
-<img #image src="{{source}}" [class.rounded]="isRounded" />
+<img #image src="{{source}}" class="ig-avatar" [class.ig-avatar--rounded]="isRounded" />
