-moved badge to a separate module -optimized tabs and buttons components -updated input tests

--- a/src/button/button.html
+++ b/src/button/button.html
@@ -1,5 +1,5 @@
-<span #igButton class="ig-button ig-button--{{type}}"
-     [attr.disabled]="disabled"
+<span #igButton class="ig-button--{{type}}"
+     [attr.disabled]="false"
      [class.ig-button--disabled]="isDisabled">
     <ng-content></ng-content>
 </span>
