--- a/src/tabbar/tab-bar-content.html
+++ b/src/tabbar/tab-bar-content.html
@@ -1,11 +1,10 @@
-<!--OLD Markup-->
 <div class="{{_itemStyle}}">
 	<ng-content></ng-content>
 	<ul #unorderedList class="{{_itemStyle}}__menu {{_itemStyle}}__menu--{{alignment}}">
 		<li *ngFor="let tab of _visibleTabs" class="{{_itemStyle}}__menu-item" [class.ig-tab-bar-inner__menu-item--selected]="tab.isSelected" [class.ig-tab-bar-inner__menu-item--disabled]="tab.isDisabled" (click)="tab.select()" >
 			<div ngClass="tab-icon">
 				<i class="material-icons">{{tab.icon}}</i>
-				<span [class.tab-icon__badge--hidden]="tab._changesCount == 0" class="tab-icon__badge">{{tab._changesCount}}</span>
+				<span [class.ig-badge--hidden]="tab._changesCount == 0" class="ig-badge">{{tab._changesCount}}</span>
 			</div>
 			<div ngClass="tab-label">{{tab.label}}</div>
 			<div ngClass="tab-color tab-color--{{tab.color}}"></div>
