(feature) added initial ripple classes (improvement) improved button's disabled class

--- a/src/button/button.html
+++ b/src/button/button.html
@@ -1,5 +1,5 @@
 <span #igButton class="ig-button--{{type}}"
-     [attr.disabled]="false"
+     [attr.disabled]="disabled"
      [class.ig-button--disabled]="isDisabled">
     <ng-content></ng-content>
 </span>
