(change) moved the modal styles to its own .scss files

--- a/src/modal/modal.html
+++ b/src/modal/modal.html
@@ -2,7 +2,7 @@
     tabindex="-1"
     [ngStyle]="{ display: isOpen ? 'block' : 'none' }"
     (click)="closeOnClick ? close() : 0">
-    <div class="modal-inner">
+    <div class="ig-modal__window">
         <ng-content></ng-content>
     <div>
 </div>
