--- a/src/navbar/navbar.html
+++ b/src/navbar/navbar.html
@@ -1,5 +1,5 @@
 <nav class="ig-navbar">
-	<span class="ig-navbar__left-btn" [class.ig-navbar__left-btn--disabled]="canGoBack()"> 
+	<span class="ig-navbar__left-btn" [class.ig-navbar__left-btn--disabled]="canGoBack() || !hasIcon()"> 
         <button igButton="icon" (click)="navigateBack($event)">
             <i class="material-icons">{{ icon }}</i>
         </button>
