--- a/demos/index.html
+++ b/demos/index.html
@@ -3,7 +3,7 @@
 <head>
     <base href="/demos">
     <meta charset="UTF-8">
-    <title>Zero Blocks Demos</title>
+    <title>Ignite UI JS Blocks Demos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/node_modules/core-js/client/shim.min.js"></script>
     <script src="/node_modules/zone.js/dist/zone.js"></script>
