(improvement) badge component styling (improvement) badge component markup

--- a/src/avatar/avatar.html
+++ b/src/avatar/avatar.html
@@ -1,4 +1,4 @@
-<div>
+<div class="ig-avatar">
     <img #image *ngIf="src || initials" src="{{src}}" class="ig-avatar--image ig-avatar--{{size}}" [class.ig-avatar--rounded]="isRounded" [style.backgroundColor]="bgColor" />
     <span *ngIf="!src && !initials" class="ig-avatar--{{size}} ig-avatar--icon" [class.ig-avatar--rounded]="isRounded" [style.backgroundColor]="bgColor" [style.color]="color">
         <i class="material-icons">{{icon}}</i>
