--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <base href="/demos">
@@ -37,6 +37,9 @@
 			font-style: normal;
 			font-stretch: normal;
 		}
+            .ig-container, .nav-list, .screen, .nav-list li span {
+                padding: 0;
+            }
 		h1 {
 			width: 427px;
 			font-size: 42px;
@@ -74,6 +77,7 @@
 			padding: 15px;
 			background-color: #ffffff;
 			box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.19);
+            float: none;
 		}
 		footer {
 			background-color: #272727;
@@ -106,14 +110,13 @@
     		margin-top: -196px;
 			float: right;
 		}
-		.screen{
+		.screen {
 			width: 274px;
 			height: 490px;
 			background: url('demos/images/reflection.png') no-repeat;
 			background-position: -2px -10px;
 			background-color: #fafafa;
 			position: relative;
-			padding: 0;
 		}
 		.ig-tab-inner {
 			padding: 15px;
@@ -138,7 +141,7 @@
 			color: #ffffff;
 		}
 		.codebox {
-			width: 800px;
+			/*width: 800px;*/
 			height: 610px;
 			background-color: #ffffff;
 			box-shadow: 0 6px 16px 0 rgba(72, 72, 72, 0.17);
@@ -159,9 +162,11 @@
 			height: 497px;
 			padding: 3% 35% 0% 20%;
         }
+            .row, header.ig-jumbotron {
+                margin: 0;
+            }
 		.nav-list {
 			list-style-type: none;
-			padding: 0;
 		}
 		.nav-list li span {
 			font-family: TitilliumWeb-Thin;
@@ -172,8 +177,7 @@
 			text-transform: lowercase;
 			color: #757575;
 			min-width: 0;
-			min-height: 0;
-			padding: 0;
+			min-height: 0;			
 		}
 		.nav-list li span:active{
 			font-weight: bold;
@@ -186,7 +190,6 @@
 		}
 		.logo-wrapper, .github-wrapper{
 			width: 50%;
-			display: inline-block;
 		}
 		.logo-wrapper{
 			float:left;
@@ -199,6 +202,12 @@
 			font-weight: 300;
 			color: #ff6978;
 		}
+            .appButton, .logo-wrapper, .github-wrapper {
+                display: inline-block;
+            }
+            .appButton {
+                margin: 1%;
+            }
 	</style>
 </head>
 <!-- 3. Display the application -->
@@ -223,18 +232,18 @@
 		</div>
     </header>
 
-		<div class="container">
-			<div class="row" style="margin-top: 10em">
-				<div class="whiteContainer col-sm-12 col-lg-10">
-					<div class="col-xs-12 col-lg-6">
-						<img src="demos/images/warehouse-app-preview-on-galaxy-2.png" style="margin-top: -100px; padding: 20px; float: left;"></a>
+		<div class="ig-container">
+			<div style="margin-top: 10em">
+				<div class="whiteContainer row col-sm-10 col-lg-10">
+					<div class="col-xs-12 col-sm-6">
+						<img src="demos/images/warehouse-app-preview-on-galaxy-2.png" style="margin-top: -100px; margin-left: -20px; /*padding: 20px;*/ float: right;"></a>
 					</div>
-					<div class="col-xs-12 col-lg-6">
+					<div class="col-xs-12 col-sm-6" style="padding-left: 30px">
 						<span class="midContentHeading">Blocks in action.</span><br>
 						<span class="midContent">Take a look at the sample application we’ve developed to get a taste of what you can build with IgniteUI Blocks. </span><br><br>
 						<div class="buttons">
-							<span class="appButton" igButton="raised" (click)="changeLink()">PREVIEW IN BROWSER</span>
-							<span class="appButton" igButton="raised" (click)="changeLink()">DOWNLOAD AS APP</span>
+							<div class="appButton" igButton="raised" (click)="changeLink()">PREVIEW IN BROWSER</div>
+							<div class="appButton" igButton="raised" (click)="changeLink()">DOWNLOAD AS APP</div>
 						</div>
 					</div>
 				</div>
@@ -243,7 +252,7 @@
 		</div>
 
 		<footer>
-			<div class="container">
+			<div class="ig-container">
 				<div class="row">
 					<div class="col-sm-12">
 						<a href="http://www.igniteui.com/" target="_blank"><img class="github-link" src="demos/images/github-link.png"></a>
