--- a/index.html
+++ b/index.html
@@ -41,19 +41,22 @@
                 padding: 0;
             }
 		h1 {
-			width: 427px;
+			/*width: 427px;*/
 			font-size: 42px;
 			font-weight: 300;
 			line-height: 1.14;
 			color: rgba(255, 255, 255, 0.87);
 		}
 		h2 {
-			width: 442px;
+			/*width: 442px;*/
 			font-size: 22px;
 			font-weight: normal;
 			line-height: 1.45;
 			color: #ffffff;
 		}
+            section {
+                margin-top: 10em
+            }
 		ul {
 			position: absolute !important;
 		}
@@ -107,7 +110,7 @@
 			width: 294px;
 			height: 605px;
 			margin-right: 100px;
-    		margin-top: -196px;
+    		margin-top: -238px;
 			float: right;
 		}
 		.screen {
@@ -146,7 +149,7 @@
 			background-color: #ffffff;
 			box-shadow: 0 6px 16px 0 rgba(72, 72, 72, 0.17);
 			padding: 0px;
-			left: 12.5%;
+			/*left: 12.5%;*/
 		}
 		.tabs{
 			font-size: 16px;
@@ -208,37 +211,64 @@
             .appButton {
                 margin: 1%;
             }
+            .samsung-phones-image {
+                margin-top: -100px; 
+                margin-bottom: -100px; 
+                margin-left: -20px; 
+                float: right;
+            }
+
+            section .text-content {
+                padding-left: 30px;
+            }
+
+       @media (max-width: 767px) {
+            .ig-jumbotron {
+                padding: 10%;
+            }
+            section {
+                    margin-top: 5em;
+            }
+
+            .samsung-phones-image {
+                margin-top: -80px;
+                margin-bottom: 0; 
+            }
+
+            .phone {
+                margin-right: 0;
+            }
+        }
 	</style>
 </head>
 <!-- 3. Display the application -->
 <body>
 	<div class="wholeContent">
-
-    <header class="row ig-jumbotron">
-		<div class="row">
-			<div class="logo-wrapper">
-				<a href="http://www.igniteui.com/" target="_blank"><img class="BlocksLogo" src="demos/images/blocks-logo.png"></a>
-			</div>
-			<div class="github-wrapper">
-				<a href="http://www.igniteui.com/" target="_blank"><img class="github-link" src="demos/images/github-link.png"></a>
-			</div>
-		</div>
+        <header class="row ig-jumbotron">
+		    <div class="row">
+			    <div class="logo-wrapper">
+				    <a href="http://www.igniteui.com/" target="_blank"><img class="BlocksLogo" src="demos/images/blocks-logo.png"></a>
+			    </div>
+			    <div class="github-wrapper">
+				    <a href="http://www.igniteui.com/" target="_blank"><img class="github-link" src="demos/images/github-link.png"></a>
+			    </div>
+		    </div>
 				
-		<div class="row">
-			<div>
-				<h1>Angular 2 development. One block at a time.</h1>
-				<h2>IgniteUI Blocks - an open source, mobile optimised, pure Angular 2 set of components and directives.</h2>
-			</div>
-		</div>
-    </header>
+		    <div class="row">
+			    <div>
+				    <h1>Angular 2 development. One block at a time.</h1>
+				    <h2>IgniteUI Blocks - an open source, mobile optimised, pure Angular 2 set of components and directives.</h2>
+			    </div>
+		    </div>
+        </header>
 
 		<div class="ig-container">
-			<div style="margin-top: 10em">
-				<div class="whiteContainer row col-sm-10 col-lg-10">
+			<section>
+				<div class="whiteContainer row col-sm-11 col-lg-10">
 					<div class="col-xs-12 col-sm-6">
-						<img src="demos/images/warehouse-app-preview-on-galaxy-2.png" style="margin-top: -100px; margin-left: -20px; /*padding: 20px;*/ float: right;"></a>
+						<img src="demos/images/warehouse-app-preview-on-galaxy-2.png" class="samsung-phones-image">
 					</div>
-					<div class="col-xs-12 col-sm-6" style="padding-left: 30px">
+					<div class="col-xs-12 col-sm-6 text-content">
 						<span class="midContentHeading">Blocks in action.</span><br>
 						<span class="midContent">Take a look at the sample application we’ve developed to get a taste of what you can build with IgniteUI Blocks. </span><br><br>
 						<div class="buttons">
@@ -247,7 +277,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 			<sample-app>Loading...</sample-app>
 		</div>
 
