--- a/demos/index.html
+++ b/demos/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Ignite UI JS Blocks Demos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://rawgit.com/web-animations/web-animations-js/master/web-animations.min.js"></script>
     <script src="/node_modules/core-js/client/shim.min.js"></script>
     <script src="/node_modules/zone.js/dist/zone.js"></script>
     <script src="/node_modules/reflect-metadata/Reflect.js"></script>
