(improvement) added badge position styles (improvement) renamed position classes to follow BEM (improvement) updated badge tests

--- a/src/badge/badge.html
+++ b/src/badge/badge.html
@@ -1,4 +1,4 @@
-<div class="ig-badge" [ngClass]="setPosition()">
+<div [ngClass]="setPosition()">
 	<div class="ig-badge__circle" [ngClass]="setClasses()">
 		<span *ngIf="!iconBdg" class="ig-badge__circle-value">{{value}}</span>
 		<i *ngIf="iconBdg" class="material-icons ig-badge__circle-value">{{iconBdg}}</i>
