--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script src="/node_modules/reflect-metadata/Reflect.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
     <script src="/node_modules/hammerjs/hammer.js"></script>
-	<script src="demos/lib/prism.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-typescript.min.js"></script>
 	<link rel="stylesheet" href="demos/lib/prism.css">
     <link rel="stylesheet" href="../dist/zero-blocks.css">
     
@@ -56,8 +57,8 @@
 						<span class="midContentHeading">Blocks in action.</span><br>
 						<span class="midContent">Take a look at the sample application we’ve developed to get a taste of what you can build with IgniteUI Blocks. </span><br><br>
 						<div class="buttons">
-							<div class="appButton" igButton="raised" (click)="changeLink()">PREVIEW IN BROWSER</div>
-							<div class="appButton" igButton="raised" (click)="changeLink()">DOWNLOAD AS APP</div>
+							<a href="https://igniteui.github.io/warehouse-js-blocks/" target="_blank"><div class="appButton" igButton="raised" (click)="changeLink()">PREVIEW IN BROWSER</div></a>
+							<a href="https://github.com/IgniteUI/warehouse-js-blocks" target="_blank"><div class="appButton" igButton="raised" (click)="changeLink()">DOWNLOAD AS APP</div></a>
 						</div>
 					</div>
 				</div>
@@ -68,7 +69,7 @@
 		<footer>
 			<div class="ig-container">
 				<div class="row">
-					<div class="col-sm-12">
+					<div class="col-xs-2 col-xs-push-5">
 						<a href="http://www.igniteui.com/" target="_blank"><img class="github-link" src="demos/images/github-link.png"></a>
 					</div>
 				</div>
