prism.css is now referneced from cdn

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-typescript.min.js"></script>
 	<link rel="stylesheet" href="demos/lib/prism.css">
     <link rel="stylesheet" href="../dist/zero-blocks.css">
-    
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
+	
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link type="text/css" rel="stylesheet" href="index.css">
